# MLOps-Github-Actions

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  LICENSE  README.md  app.py  main.py  pyproject.toml
.github/workflows/: ci_cd_workflow.yml  hello_world.yml
screenshots/hello_world/: 2_Print Hello World.txt  README.md
sentiment_app/: app.py
src/: load_models.py
src/scripts/: download_artifacts.py  export_classifier_to_onnx.py  export_sentence_transformer_to_onnx.py  settings.py
tests/: test_app.py  test_interference.py
